@@ -1,0 +1,6 @@
+/**
+ * Dispatch of SPARQL queries.
+ */
+@org.mmisw.ont.util.Unfinished
+package org.mmisw.ont.sparql;
+
