@@ -1,0 +1,5 @@
+/**
+ * Misc utilities.
+ */
+package org.mmisw.ont.util;
+
