@@ -3,6 +3,12 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-10-19
+	- new convenience annotation @org.mmisw.ont.util.Unfinished
+	- sparql stuff moved to package org.mmisw.ont.sparql
+	- package-info.java files added
+	
+	
 2008-10-18  v. 0.1.1 (20081018)
 	- General code clean-up (loggers, non "static" classes)
 	- New OntConfig to handle configuration parameters; removed hard-coded params.
